force-app/main/default/objects/Battery_Inward__c/Battery_Inward__c.object-meta.xml
<CustomObject>
    <label>Battery Inward</label>
    <nameField>
        <displayFormat>INW-{0000}</displayFormat>
        <label>Inward Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Battery Inwards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>