force-app/main/default/objects/Battery_Inward__c/fields/Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment__c</fullName>
    <label>Acknowledgment</label>
    <type>Url</type>
</CustomField>