force-app/main/default/objects/Battery_Inward__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Battery</label>
    <referenceTo>Battery__c</referenceTo>
    <relationshipLabel>Battery Inwards</relationshipLabel>
    <relationshipName>Battery_Inwards</relationshipName>
    <type>Lookup</type>
</CustomField>