force-app/main/default/objects/Battery_Inward__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>