force-app/main/default/objects/Battery_Inward__c/fields/Inward_Session__c.field-meta.xml
<CustomField>
    <fullName>Inward_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inward Session</label>
    <referenceTo>Inward_Session__c</referenceTo>
    <relationshipLabel>Battery Inwards</relationshipLabel>
    <relationshipName>Battery_Inwards</relationshipName>
    <type>Lookup</type>
</CustomField>