force-app/main/default/objects/Battery_Inward__c/fields/Scan_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scan_Date_Time__c</fullName>
    <label>Scan Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>