force-app/main/default/objects/Battery_Inward__c/fields/Scanned_By__c.field-meta.xml
<CustomField>
    <fullName>Scanned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scanned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Battery_Inwards</relationshipName>
    <type>Lookup</type>
</CustomField>