force-app/main/default/objects/Battery_Inward__c/fields/Scanned_QR__c.field-meta.xml
<CustomField>
    <fullName>Scanned_QR__c</fullName>
    <label>Scanned QR</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>