force-app/main/default/objects/Battery_Inward__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Battery Inwards</relationshipLabel>
    <relationshipName>Battery_Inwards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>